{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "da648091-8124-4e14-9e19-e4d59bc1e573",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "dbdba89e-adec-43b2-a8c6-cfdaa697960e",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a390b7c3-f527-4b38-8df0-cf125a905cdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "14609b5e-d202-4a0f-943e-5d1cf200dd7f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "30e57b5e-daf0-4003-8761-ecd006dbaf85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraVertical",
                    "type": "PassThrough",
                    "id": "2b68f577-ad37-454a-87d2-28c7eccfbee0",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "Hold"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "34827ca7-22b2-4256-8a33-db8633792433",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59ebc5ed-88b9-4206-8eb4-a8f3c9057052",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36bdbeed-c013-4f3a-8c7e-1d77ec6d805b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d42026f7-8abe-4f65-9542-8cb749e1b9ea",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "792cf483-50b0-4310-9e83-27a71243051a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}